--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
         <input type="password" id="password" name="password" required>
         <br><br>
         <button type="submit">Login</button>
-        <button type="button" onclick="location.href='/req/signup'">Sign Up</button>
+        <button type="button" onclick="location.href='/signup'">Sign Up</button>
     </form>
 </body>
 </html>
