--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
-    <h2>Login</h2>
-    <form method="post" action="/login">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br><br>
-        <button type="submit">Login</button>
-        <button type="button" onclick="location.href='/signup'">Sign Up</button>
-    </form>
+    <div class="container">
+        <h2>Note&Sum</h2>
+        <div th:if="${param.error}" class="error-message">
+            Invalid username or password.
+        </div>
+        <div th:if="${successMessage}" class="success-message" th:text="${successMessage}"></div>
+        <form method="post" action="/login">
+            <div class="form-group">
+                <label for="username">e-mail:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="button-group">
+                <button type="submit">Login</button>
+                <button type="button" onclick="location.href='/signup'">Sign Up</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
